// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should handle no middlewares 1`] = `
{
  "_cached": null,
  "_def": {
    "catchall": {
      "_def": {
        "typeName": "ZodNever",
      },
    },
    "typeName": "ZodObject",
    "unknownKeys": "strip",
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge input object schemas 1`] = `
{
  "_def": {
    "left": {
      "_def": {
        "left": {
          "_def": {
            "left": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "right": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "typeName": "ZodIntersection",
          },
        },
        "right": {
          "_cached": null,
          "_def": {
            "catchall": {
              "_def": {
                "typeName": "ZodNever",
              },
            },
            "typeName": "ZodObject",
            "unknownKeys": "strip",
          },
        },
        "typeName": "ZodIntersection",
      },
    },
    "right": {
      "_cached": null,
      "_def": {
        "catchall": {
          "_def": {
            "typeName": "ZodNever",
          },
        },
        "typeName": "ZodObject",
        "unknownKeys": "strip",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge intersection object schemas 1`] = `
{
  "_def": {
    "left": {
      "_def": {
        "left": {
          "_def": {
            "left": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "right": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "typeName": "ZodIntersection",
          },
        },
        "right": {
          "_def": {
            "left": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "right": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "typeName": "ZodIntersection",
          },
        },
        "typeName": "ZodIntersection",
      },
    },
    "right": {
      "_def": {
        "left": {
          "_cached": null,
          "_def": {
            "catchall": {
              "_def": {
                "typeName": "ZodNever",
              },
            },
            "typeName": "ZodObject",
            "unknownKeys": "strip",
          },
        },
        "right": {
          "_cached": null,
          "_def": {
            "catchall": {
              "_def": {
                "typeName": "ZodNever",
              },
            },
            "typeName": "ZodObject",
            "unknownKeys": "strip",
          },
        },
        "typeName": "ZodIntersection",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge mixed object schemas 1`] = `
{
  "_def": {
    "left": {
      "_def": {
        "left": {
          "_def": {
            "left": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "right": {
              "_cached": null,
              "_def": {
                "catchall": {
                  "_def": {
                    "typeName": "ZodNever",
                  },
                },
                "typeName": "ZodObject",
                "unknownKeys": "strip",
              },
            },
            "typeName": "ZodIntersection",
          },
        },
        "right": {
          "_def": {
            "options": [
              {
                "_cached": null,
                "_def": {
                  "catchall": {
                    "_def": {
                      "typeName": "ZodNever",
                    },
                  },
                  "typeName": "ZodObject",
                  "unknownKeys": "strip",
                },
              },
              {
                "_cached": null,
                "_def": {
                  "catchall": {
                    "_def": {
                      "typeName": "ZodNever",
                    },
                  },
                  "typeName": "ZodObject",
                  "unknownKeys": "strip",
                },
              },
            ],
            "typeName": "ZodUnion",
          },
        },
        "typeName": "ZodIntersection",
      },
    },
    "right": {
      "_cached": null,
      "_def": {
        "catchall": {
          "_def": {
            "typeName": "ZodNever",
          },
        },
        "typeName": "ZodObject",
        "unknownKeys": "strip",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Should merge union object schemas 1`] = `
{
  "_def": {
    "left": {
      "_def": {
        "left": {
          "_def": {
            "options": [
              {
                "_cached": null,
                "_def": {
                  "catchall": {
                    "_def": {
                      "typeName": "ZodNever",
                    },
                  },
                  "typeName": "ZodObject",
                  "unknownKeys": "strip",
                },
              },
              {
                "_cached": null,
                "_def": {
                  "catchall": {
                    "_def": {
                      "typeName": "ZodNever",
                    },
                  },
                  "typeName": "ZodObject",
                  "unknownKeys": "strip",
                },
              },
            ],
            "typeName": "ZodUnion",
          },
        },
        "right": {
          "_def": {
            "options": [
              {
                "_cached": null,
                "_def": {
                  "catchall": {
                    "_def": {
                      "typeName": "ZodNever",
                    },
                  },
                  "typeName": "ZodObject",
                  "unknownKeys": "strip",
                },
              },
              {
                "_cached": null,
                "_def": {
                  "catchall": {
                    "_def": {
                      "typeName": "ZodNever",
                    },
                  },
                  "typeName": "ZodObject",
                  "unknownKeys": "strip",
                },
              },
            ],
            "typeName": "ZodUnion",
          },
        },
        "typeName": "ZodIntersection",
      },
    },
    "right": {
      "_def": {
        "options": [
          {
            "_cached": null,
            "_def": {
              "catchall": {
                "_def": {
                  "typeName": "ZodNever",
                },
              },
              "typeName": "ZodObject",
              "unknownKeys": "strip",
            },
          },
          {
            "_cached": null,
            "_def": {
              "catchall": {
                "_def": {
                  "typeName": "ZodNever",
                },
              },
              "typeName": "ZodObject",
              "unknownKeys": "strip",
            },
          },
        ],
        "typeName": "ZodUnion",
      },
    },
    "typeName": "ZodIntersection",
  },
}
`;

exports[`I/O Schema and related helpers > getFinalEndpointInputSchema() > Zod Issue #600: can not intersect object schema with passthrough and transformation 1`] = `
[ZodError: [
  {
    "code": "invalid_intersection_types",
    "path": [],
    "message": "Intersection results could not be merged"
  }
]]
`;
